landing page flickers fix

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -41,13 +41,9 @@ code {
   display: none;
 }
 
-/* .mapboxgl-popup-content {
-  background-color: rgb(255, 255, 255, 90%) !important;
-  border-radius: 5px;
-} */
-
 .mapMarkerPopup {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  padding: 5px;
 }
 
 .mapboxgl-popup-content {
@@ -75,6 +71,7 @@ code {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  padding-left: 20px;
 }
 
 .popupCancelButton:active {
@@ -93,10 +90,6 @@ code {
   left: 0;
   margin: 12px;
   border-radius: 4px;
-}
-
-html {
-  background-color: rgba(163, 163, 163, 0.6);
 }
 
 .event-form {
@@ -916,7 +909,7 @@ input:checked + .slider:before {
   border: 2px solid rgb(99 99 99 / 40%);
 }
 
-#GoogleLogin {
+.landing-login > #GoogleLogin {
   box-shadow: 0px 2px 7px 2px #00000033;
   padding: 0;
 }
@@ -938,8 +931,8 @@ input:checked + .slider:before {
 }
 
 .nav-item {
-  display: flex;
-  padding: 0.5em;
+  display: inline-block;
+  padding: 0.7em;
 }
 
 #navBar {
@@ -1342,8 +1335,12 @@ input:checked + .slider:before {
 }
 
 .landingGroup {
-  flex: 33.33%;
+  flex: 33.33% 1;
   padding: 5px;
+  background-color: #f9f9f947;
+  border: 1px solid #efefef;
+  margin: 10px;
+  border-radius: 7px;
 }
 
 .landing-login .nav-item {
